--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,20 @@
   <title>Perlin Noise</title>
 </head>
 <body>
-  <canvas id="canvas"></canvas>
+  <canvas id="canvas" width="800" height="450"></canvas>
 </body>
 <script src="perlin.js"></script>
+<style>
+html, body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#canvas{
+  width: 800px;
+  height: 450px;
+  background: black;
+}
+</style>
 </html>
