--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,20 @@ html, body {
   margin: 0;
   width: 100%;
   height: 100%;
+  background: #888;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #canvas{
   width: 800px;
   height: 450px;
   background: black;
+  border: 1px solid black;
 }
 </style>
 </html>
