fix noticable regularities

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
   <canvas id="canvas" width="800" height="450"></canvas>
 </body>
-<script src="perlin.js"></script>
+<script src="perlin2.js"></script>
 <style>
 html, body {
   margin: 0;
